--- a/SiteProduct/Views/Home/Create.cshtml
+++ b/SiteProduct/Views/Home/Create.cshtml
@@ -1,8 +1,7 @@
-﻿@using SiteProduct.Models
-@using SiteProduct.Services
-@model Product
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject ITypeProductData category
+﻿@model Product
+@{
+    ViewBag.Title = "Новый элемент";
+}
 <h2>Новый товар</h2>
 <form asp-action="Create" method="post">
     <div asp-validation-summary="All"></div>
