--- a/SiteProduct/Views/Home/Index.cshtml
+++ b/SiteProduct/Views/Home/Index.cshtml
@@ -1,24 +1,21 @@
-﻿@using SiteProduct.Models
-@using SiteProduct.ViewModels;
-@model IEnumerable<ProductViewModel>
-<html>
-    <head>
-        <title>Product</title>
-    </head>
-    <body>
-        <table>
-            <tr><td>Id</td><td>Имя</td><td>Цена</td><td>Дата изготовления</td><td>Категория</td></tr>
-        @foreach (var product in Model ?? new List<ProductViewModel>())
-        {
-            <tr>
-                <td>@Html.ActionLink(product.Id.ToString(), "Details", 
-                new {id = product.Id})</td>
-                <td>@product.Name</td>
-                <td>@product.Price.ToString("C")</td>
-                <td>@product.ProductionTime.ToString("dd.MM.yyyy")</td>
-                <td>@product.Category</td>
-            </tr>    
-        }
-    </table>
-    </body>
-</html>
+﻿@model IEnumerable<ProductViewModel>
+@{
+    ViewBag.Title = "Домашняя страница";
+}
+<table>
+    <tr><td>Id</td><td>Имя</td><td>Цена</td><td>Дата изготовления</td><td>Категория</td></tr>
+    @foreach (var product in Model ?? new List<ProductViewModel>())
+    {
+        <tr>
+            <td>
+                @Html.ActionLink(product.Id.ToString(), "Details",
+            new {id = product.Id})
+            </td>
+            <td>@product.Name</td>
+            <td>@product.Price.ToString("C")</td>
+            <td>@product.ProductionTime.ToString("dd.MM.yyyy")</td>
+            <td>@product.Category</td>
+        </tr>
+    }
+</table>
+@section footer{<div>Это нижний колонтитул домашней страницы</div>}
